# UDON_generator

./: Cargo.toml  readme.md
docs/: index.html
docs/pkg/: udon_generator_lib.d.ts  udon_generator_lib.js  udon_generator_lib_bg.wasm
src/: lib.rs  main.rs  parser.rs
src/parser/: assign.rs  call.rs  class_def.rs  expression.rs  file_input.rs  for_stmt.rs  func_def.rs  identifier.rs  if_stmt.rs  import.rs  index.rs  literal.rs  member.rs  simplestatement.rs  space.rs  statement.rs  subseq.rs  suite.rs  unary_expr.rs
test/: 1.py  2.py  3.py  4.py  5.py  6.py
