[package]
name = "udon_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="udon_generator_lib"
path="src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name="udon_generator"
path="src/main.rs"

[dependencies]
nom = "7.0.0"
log = "0.4.0"
env_logger = "0.8.4"
wasm-bindgen = "0.2"
